--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -24,6 +24,7 @@
 \newcommand{\hili}[1]{{#1}}
 \newcommand{\hl}[1]{{#1}}
 \newcommand*\Bell{\ensuremath{\boldsymbol\ell}}
+\newcommand{\bm}[1]{\boldsymbol #1}
 \newcommand{\Trace}[1]{\rm Tr \{ #1 \} }
 
 \begin{document}
@@ -513,6 +514,8 @@ conventions see appendix~\ref{cfparconventions}.
 
 \input{ic1ion.tex}
 \clearpage
+
+\input{bfk.tex}
 
 \input{graphic_display.tex}
 
