bug in mcdisp threading removed (intensitybey was sometimes wrongly initialized)

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -510,6 +510,10 @@ conventions see appendix~\ref{cfparconventions}.
 
 \input{q_int.tex}
 
+\clearpage
+
+\input{phonon.tex}
+
 \input{extsimod.tex}
 
 \input{ic1ion.tex}
