bugfix of rotateBlmmcdisp

--- a/doc/li120914.bib
+++ b/doc/li120914.bib
@@ -1,3 +1,20 @@
+@article{blanco13-104411,
+  title = {Phasons, amplitude modes, and spin waves in the amplitude-modulated magnetic phase of PrNi${}_{2}$Si${}_{2}$},
+  author = {Blanco, J. A. and F\aa{}k, B. and Jensen, J. and Rotter, M. and Hiess, A. and Schmitt, D. and Lejay, P.},
+  journal = {Phys. Rev. B},
+  volume = {87},
+  issue = {10},
+  pages = {104411},
+  numpages = {9},
+  year = {2013},
+  month = {Mar},
+  doi = {10.1103/PhysRevB.87.104411},
+  url = {http://link.aps.org/doi/10.1103/PhysRevB.87.104411},
+  publisher = {American Physical Society}
+}
+
+
+
 @incollection{dagotto03-1,
 author = {Elbio Dagotto},
    booktitle     = {Springer Series in Solid-State Sciences},
