option -xa -xaf added to mcdisp for rixs

--- a/doc/mcdisp.tex
+++ b/doc/mcdisp.tex
@@ -79,7 +79,8 @@ $y||b$,$z||(a \times b)$ and $x$ perpendicular to $y$ and $z$).
                   After finishing the different processes, the results of the calculations stored e.g. in {\prg 001mcdisp.qei} and
                   {\prg 002mcdisp.qei} may be merged by commands like {\prg appendfile mcdisp.qei 001mcdisp.qei 002mcdisp.qei}.
     \item Option {\prg -x} to calculate resonant inelastic x-ray intensities (maximized with respect to azimuth) instead of neutron intensities.
-    \item Option {\prg-xa} to calculate resonant inelastic x-ray intensities with complete azimuth dependence for each reflection.
+    \item Option {\prg -xa  azstp} to calculate resonant inelastic x-ray intensities with complete azimuth dependence for each reflection in steps azstep (deg).
+    \item Option {\prg -xaf  azimuth} to calculate resonant inelastic x-ray intensities for the given azimuth (deg).
 				\end{itemize}
 \item [\prg mcdispit [options]][file.mf]]  same as {\prg mcdisp}, but no graphic window
 \end{description} 
